// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic value 1`] = `
<div>
  <p>
    <b>
      ✖
    </b>
    <b>
      test string data
    </b>
    <b>
      123456789
    </b>
    <b>
      〇
    </b>
    <b>
      ✖
    </b>
    <b>
      〇
    </b>
    <b>
      ✖
    </b>
    <b>
      〇
    </b>
    <b>
      ✖
    </b>
    <b>
      ✖
    </b>
    <b>
      http://localhost/
    </b>
  </p>
</div>
`;

exports[`basic value 2`] = `
<div>
  <p>
    <b>
      ✖
    </b>
    <b>
      test string data
    </b>
    <b>
      123456789
    </b>
    <b>
      〇
    </b>
    <b>
      ✖
    </b>
    <b>
      〇
    </b>
    <b>
      ✖
    </b>
    <b>
      〇
    </b>
    <b>
      ✖
    </b>
    <b>
      ✖
    </b>
    <b>
      http://localhost/?data_b=&data_s=test%20string%20data&data_n=123456789&bits=l
    </b>
  </p>
</div>
`;

exports[`basic value 3`] = `<div />`;

exports[`basic value 4`] = `
Object {
  "bits": BitsData {
    "field": Bits {
      "idx": Object {
        "a": 0,
        "b": 1,
        "c": 2,
        "d": 3,
        "e": 4,
        "f": 5,
        "g": 6,
      },
      "labels": Array [
        "a",
        "b",
        "c",
        "d",
        "e",
        "f",
        "g",
      ],
      "mask": 127,
      "nega": Object {
        "a": 2147483646,
        "b": 2147483645,
        "c": 2147483643,
        "d": 2147483639,
        "e": 2147483631,
        "f": 2147483615,
        "g": 2147483583,
      },
      "posi": Object {
        "a": 1,
        "b": 2,
        "c": 4,
        "d": 8,
        "e": 16,
        "f": 32,
        "g": 64,
      },
    },
    "has": Object {
      "field": 0,
      "has": 0,
      "is": 0,
      "value": 0,
    },
    "is": Object {
      "field": false,
      "has": false,
      "is": false,
      "value": false,
    },
    "value": 21,
  },
  "data_b": false,
  "data_n": 123456789,
  "data_s": "test string data",
}
`;
